Fixed mobile bug on events page + adjusted spacing on team page for responsiveness

--- a/uxWeb/src/styles/events.css
+++ b/uxWeb/src/styles/events.css
@@ -113,3 +113,9 @@
     margin-left: 5%;
   }
 }
+
+@media (min-width: 2700px) {
+  .event-category-title {
+    margin-left: 20%;
+  }
+}
